--- a/app/src/main/res/layout/popup_activtty.xml
+++ b/app/src/main/res/layout/popup_activtty.xml
@@ -1,116 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/popup_background">
-
+    android:background="#F8F4E4">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="40dp">
-
+        android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/category"
-            android:text="카테고리"
-            android:textSize="12dp"
-            android:textColor="#999999" />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="240dp"
-            android:layout_height="34dp"
-            android:layout_below="@id/category"
-            android:entries="@array/category">
-            //만들어둔 데이터 연결
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="오잉"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:background="#F8C81E"/>
 
-        </Spinner>
     </LinearLayout>
-
+    <!-- popup 내용인가? -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="20dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="브랜드"
-            android:textSize="12dp"
-            android:textColor="#999999" />
+        android:orientation="vertical">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvBrand"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="20dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="제품명"
-            android:textSize="12dp"
-            android:textColor="#999999" />
-
+            android:id="@+id/editText1"
+            android:textSize="10dp"
+            android:gravity="center"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvProduct"/>
+            android:id="@+id/editText2"
+            android:textSize="10dp"
+            android:gravity="center"/>
     </LinearLayout>
-
-    //비건 옵션 버튼 부뷴
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginVertical="20dp">
-    </LinearLayout>
-
-    //사진 추가부분
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginBottom="60dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진추가"
-            android:textSize="12dp"
-            android:textColor="#999999" />
-    </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cancelBtn"
             android:textSize="10dp"
-            android:text="닫기"
-            android:textColor="#767676"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:backgroundTint="@android:color/transparent"
-            android:onClick="mOnClose"
-            android:layout_marginHorizontal="20dp"/>
+            android:text="취소"
+            android:textColor="#ffff"
+            android:backgroundTint="#5BA874"
+            android:layout_marginHorizontal="10dp"
+            />
 
         <Button
             android:layout_width="wrap_content"
@@ -118,10 +59,11 @@
             android:id="@+id/okBtn"
             android:textSize="10dp"
             android:text="확인"
-            android:textColor="#767676"
-            android:backgroundTint="#00000000"
-            android:layout_marginHorizontal="20dp"
+            android:textColor="#ffff"
+            android:backgroundTint="#5BA874"
+            android:layout_marginHorizontal="10dp"
             />
+
     </LinearLayout>
 
 
